
[TestApp/focus - 1]
╭─Context───────────╮╭─Messages────────────────────────────────╮
│[38;2;98;98;98mNo Context.[m        ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
╰───────────────────╯╰─────────────────────────────────────────╯
[32m╭─[0m[1;32mMessage Assistant[m[32m────────────────────────────────────────────╮[m
[32m│[m[37m[m[7;37m [m                                                             [32m│[m
[32m│[m[30m                                                              [m[32m│[m
[32m│[m[30m                                                              [m[32m│[m
[32m╰──────────────────────────────────────────────────────────────╯[m
---

[TestApp/focus - 2]
[32m╭─[0m[1;32mContext[m[32m───────────╮[m╭─Messages────────────────────────────────╮
[32m│[m[38;2;98;98;98mNo Context.[m        [32m│[m│                                         │
[32m│[m                   [32m│[m│                                         │
[32m│[m                   [32m│[m│                                         │
[32m│[m                   [32m│[m│                                         │
[32m│[m                   [32m│[m│                                         │
[32m│[m                   [32m│[m│                                         │
[32m│[m                   [32m│[m│                                         │
[32m│[m                   [32m│[m│                                         │
[32m│[m                   [32m│[m│                                         │
[32m╰───────────────────╯[m╰─────────────────────────────────────────╯
╭─Message Assistant────────────────────────────────────────────╮
│[37m[m[7;37m [m                                                             │
│[30m                                                              [m│
│[30m                                                              [m│
╰──────────────────────────────────────────────────────────────╯
---

[TestApp/focus - 3]
╭─Context───────────╮[32m╭─[0m[1;32mMessages[m[32m────────────────────────────────╮[m
│[38;2;98;98;98mNo Context.[m        │[32m│[m                                         [32m│[m
│                   │[32m│[m                                         [32m│[m
│                   │[32m│[m                                         [32m│[m
│                   │[32m│[m                                         [32m│[m
│                   │[32m│[m                                         [32m│[m
│                   │[32m│[m                                         [32m│[m
│                   │[32m│[m                                         [32m│[m
│                   │[32m│[m                                         [32m│[m
│                   │[32m│[m                                         [32m│[m
╰───────────────────╯[32m╰─────────────────────────────────────────╯[m
╭─Message Assistant────────────────────────────────────────────╮
│[37m[m[7;37m [m                                                             │
│[30m                                                              [m│
│[30m                                                              [m│
╰──────────────────────────────────────────────────────────────╯
---

[TestApp/focus - 4]
╭─Context───────────╮╭─Messages────────────────────────────────╮
│[38;2;98;98;98mNo Context.[m        ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
╰───────────────────╯╰─────────────────────────────────────────╯
[32m╭─[0m[1;32mMessage Assistant[m[32m────────────────────────────────────────────╮[m
[32m│[m[37m[m[7;37m [m                                                             [32m│[m
[32m│[m[30m                                                              [m[32m│[m
[32m│[m[30m                                                              [m[32m│[m
[32m╰──────────────────────────────────────────────────────────────╯[m
---

[TestApp/input - 1]
╭─Context───────────╮╭─Messages────────────────────────────────╮
│[38;2;98;98;98mNo Context.[m        ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
╰───────────────────╯╰─────────────────────────────────────────╯
[32m╭─[0m[1;32mMessage Assistant[m[32m────────────────────────────────────────────╮[m
[32m│[m[37m[mhey[7;37m [m                                                          [32m│[m
[32m│[m[30m                                                              [m[32m│[m
[32m│[m[30m                                                              [m[32m│[m
[32m╰──────────────────────────────────────────────────────────────╯[m
---

[TestApp/input - 2]
╭─Context───────────╮╭─Messages────────────────────────────────╮
│[38;2;98;98;98mNo Context.[m        ││                                      hey│
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
╰───────────────────╯╰─────────────────────────────────────────╯
[32m╭─[0m[1;32mMessage Assistant[m[32m────────────────────────────────────────────╮[m
[32m│[m[37m[m[7;37m [m                                                             [32m│[m
[32m│[m[30m                                                              [m[32m│[m
[32m│[m[30m                                                              [m[32m│[m
[32m╰──────────────────────────────────────────────────────────────╯[m
---
